@@ -1,3 +1,7 @@
+Mon May 24 8:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
+
+	* drawboard3d.c, misc3d.c: Improve dice dot drawing
+
 Wed May 17 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>
 
 	* drawboard3d.c, misc3d.c: Vary board tesselation based on accuracy setting
